# MishformerLens

./: README.md  pyproject.toml
assets/: all_gpt2_hook_points.txt  o1_prompt.txt  o1_prompt_gpt_neox.txt  pythia_named_modules.txt  pythia_tl.txt  tl_gpt2_small_with_use_hook_mlp_and_attn_in_keys_not_in_mishformer_lens.txt
mishformer_lens/: __init__.py  ast_patching.py  ast_patching_utils.py  hooked_transformer.py  mishformer_lens_expoloratory_analysis_demo.py  scratch.py
